--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
                 <div data-key="*" class="key operator">
                     <span>x</span>
                 </div>
-                <div data-key="/" class="key">
+                <div data-key="4" class="key">
                     <span>4</span>
                 </div>
-                <div data-key="/" class="key">
+                <div data-key="5" class="key">
                     <span>5</span>
                 </div>
-                <div data-key="/" class="key">
+                <div data-key="6" class="key">
                     <span>6</span>
                 </div>
                 <div data-key="-" class="key operator">
